add customer.api rev_1

--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -19,6 +19,8 @@ services:
     container_name: productdb
     environment:
         MYSQL_ROOT_PASSWORD: "Ptp@899398"
+        MYSQL_TCP_PORT: 3307
+        MYSQL_DATABASE: ProductDB
     restart: always
     volumes:
         - mysql_data:/var/lib/mysql
@@ -30,7 +32,7 @@ services:
     environment:
         - POSTGRES_USER=admin
         - POSTGRES_PASSWORD=admin1234
-        - POSTGRES_DB=DiscountDb
+        - POSTGRES_DB=CustomerDb
     restart: always
     ports:
         - "5433:5432"
@@ -101,7 +103,7 @@ services:
     ports:
         - "5601:5601"
 
-    #microservice section
+  #microservice section
   product.api:
     container_name: product.api
     environment:
@@ -113,4 +115,14 @@ services:
     ports:
       - "6002:80"
     restart: always
-    
+  customer.api:
+    container_name: customer.api    
+    environment:
+        - ASPNETCORE_ENVIRONMENT=Development
+        - ASPNETCORE_URLS=http://+:80
+        - "ConnectionStrings:DefaultConnectionString=Server=customerdb;Port=5432;Database=CustomerDb;User Id=admin;Password=admin1234;"
+    depends_on:
+        - customerdb
+    ports:
+        - "6003:80"
+    restart: always
