--- a/src/BuildingBlocks/Common.Logging/Common.Logging.csproj
+++ b/src/BuildingBlocks/Common.Logging/Common.Logging.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Npgsql" Version="6.0.11" />
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
     <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
