--- a/src/BuildingBlocks/Contracts/Contracts.csproj
+++ b/src/BuildingBlocks/Contracts/Contracts.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
+    <PackageReference Include="Npgsql" Version="6.0.11" />
   </ItemGroup>
 
 </Project>
