--- a/src/BuildingBlocks/Shared/Shared.csproj
+++ b/src/BuildingBlocks/Shared/Shared.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Configuration\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql" Version="6.0.11" />
+  </ItemGroup>
+
 </Project>
