--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -33,12 +33,17 @@ services:
   kibana:
     image: docker.elastic.co/kibana/kibana:7.17.2
 
-    #microservices api section
+ #microservices api section
   product.api :
     image: ${DOCKER_REGISTRY-}product-api:${PLATFORM:-linux}-${TAG:-latest}
     build:
         context: .
         dockerfile: Services/Product.API/Dockerfile
+  customer.api :
+    image: ${DOCKER_REGISTRY-}customer-api:${PLATFORM:-linux}-${TAG:-latest}
+    build:
+        context: .
+        dockerfile: Services/Customer.API/Dockerfile
     
 #network section
 networks:
