add order_api rev_03

--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=localhost,1435;Database=OrderDb;User Id=sa;Password=Passw0rd!"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
