update CRUD , add email ordering rev_4

--- a/src/Services/Ordering/Ordering.API/appsettings.Development.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.Development.json
@@ -1,4 +1,14 @@
 {
+  "SMTPEmailSetting": {
+    "DisplayName": "Tp Microservice",
+    "EnanbleVerification": false,
+    "From": "phantanphu899398@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "UseSsl": true,
+    "Port": 465,
+    "Username": "Phantanphu10@gmail.com",
+    "Password": "Ptp@899398"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
