--- a/src/BuildingBlocks/Contracts/Contracts.csproj
+++ b/src/BuildingBlocks/Contracts/Contracts.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Npgsql" Version="6.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.csproj" />
+  </ItemGroup>
+
 </Project>
