--- a/src/BuildingBlocks/Infrastructure/Infrastructure.csproj
+++ b/src/BuildingBlocks/Infrastructure/Infrastructure.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MailKit" Version="3.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Npgsql" Version="6.0.11" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
   </ItemGroup>
 
   <ItemGroup>
