--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -132,6 +132,7 @@ services:
         - ASPNETCORE_ENVIRONMENT=Development
         - ASPNETCORE_URLS=http://+:80
         - "CacheSettings:ConnectionString=basketdb:6379"
+        - "EventBusSettings:HostAddress=amqp://guest:guest@localhost:5672"
     depends_on:
         - basketdb
     ports:
@@ -143,6 +144,7 @@ services:
         - ASPNETCORE_ENVIRONMENT=Development
         - ASPNETCORE_URLS=http://+:80
         - "ConnectionStrings:DefaultConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=Passw0rd!;Multipleactiveresultsets=true"
+        - "EventBusSettings:HostAddress=amqp://guest:guest@localhost:5672"
     depends_on:
         - orderdb
     ports:
