--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -133,6 +133,7 @@ services:
         - ASPNETCORE_URLS=http://+:80
         - "CacheSettings:ConnectionString=basketdb:6379"
         - "EventBusSettings:HostAddress=amqp://guest:guest@localhost:5672"
+        - "GrpcSettings:StockUrl=http://inventory.grpc"  
     depends_on:
         - basketdb
     ports:
@@ -149,4 +150,29 @@ services:
         - orderdb
     ports:
         - "6005:80"
+    restart: always
+
+  inventory.product.api:
+    container_name: inventory.product.api 
+    environment:
+        - ASPNETCORE_ENVIRONMENT=Development
+        - ASPNETCORE_URLS=http://+:80
+        - "MongoDbSettings:ConnectionString=mongodb://inventorydb:27017"
+        - "MongoDbSettings:DatabaseName=InventoryDb"
+    depends_on:
+        - inventorydb
+    ports:
+        - "6006:80"
+    restart: always
+  inventory.grpc:
+    container_name: inventory.grpc 
+    environment:
+        - ASPNETCORE_ENVIRONMENT=Development
+        - ASPNETCORE_URLS=http://+:80
+        - "MongoDbSettings:ConnectionString=mongodb://inventorydb:27017"
+        - "MongoDbSettings:DatabaseName=InventoryDb"
+    depends_on:
+        - inventorydb
+    ports:
+        - "6007:80"
     restart: always
