--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -54,6 +54,17 @@ services:
     build:
       context: .
       dockerfile: Services/Ordering/Ordering.API/Dockerfile
+  inventory.product.api:
+    image: ${DOCKER_REGISTRY-}inventory-product-api:${PLATFORM:-linux}-${TAG:-latest}
+    build:
+      context: .
+      dockerfile: Services/Inventory/Inventory.Product.API/Dockerfile
+  inventory.grpc:
+    image: ${DOCKER_REGISTRY-}inventory-grpc:${PLATFORM:-linux}-${TAG:-latest}
+    build:
+      context: .
+      dockerfile: Services/Inventory/Inventory.Grpc/Dockerfile
+
     
 #network section
 networks:
