--- a/src/ApiGateways/OcelotApiGw/OcelotApiGw.csproj
+++ b/src/ApiGateways/OcelotApiGw/OcelotApiGw.csproj
@@ -8,7 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="Npgsql" Version="6.0.11" />
+    <PackageReference Include="Ocelot" Version="18.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\BuildingBlocks\Common.Logging\Common.Logging.csproj" />
+    <ProjectReference Include="..\..\BuildingBlocks\Contracts\Contracts.csproj" />
+    <ProjectReference Include="..\..\BuildingBlocks\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
