--- a/src/BuildingBlocks/Infrastructure/Infrastructure.csproj
+++ b/src/BuildingBlocks/Infrastructure/Infrastructure.csproj
@@ -12,8 +12,12 @@
 		<PackageReference Include="FluentValidation" Version="11.0.3" />
 		<PackageReference Include="MailKit" Version="3.3.0" />
 		<PackageReference Include="MongoDB.Driver" Version="2.17.1" />
+		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.22.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+
 		<PackageReference Include="Npgsql" Version="6.0.11" />
+
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.0" />
 	</ItemGroup>
 
 	<ItemGroup>
