--- a/src/Services/Customer.API/Properties/launchSettings.json
+++ b/src/Services/Customer.API/Properties/launchSettings.json
@@ -1,12 +1,21 @@
 {
   "profiles": {
+    //"Customer.API": {
+    //  "commandName": "Project",
+    //  "environmentVariables": {
+    //    "ASPNETCORE_ENVIRONMENT": "Development"
+    //  },
+    //  "dotnetRunMessages": true,
+    //  "applicationUrl": "http://localhost:5003"
     "Customer.API": {
       "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "",
+      "applicationUrl": "http://localhost:5003",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5003"
+      }
     },
     "IIS Express": {
       "commandName": "IISExpress",
