--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -64,6 +64,11 @@ services:
     build:
       context: .
       dockerfile: Services/Inventory/Inventory.Grpc/Dockerfile
+  apigw.ocelot:
+    image: ${DOCKER_REGISTRY-}apigw-ocelot:${PLATFORM:-linux}-${TAG:-latest}
+    build:
+      context: .
+      dockerfile: ApiGateways/OcelotApiGw/Dockerfile
 
     
 #network section
