configure hangfire rev-16

--- a/src/Services/Basket.API/Basket.API.csproj
+++ b/src/Services/Basket.API/Basket.API.csproj
@@ -41,4 +41,10 @@
 	  </Compile>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="EmailTemplates\reminder-checkout-order.html">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
+
 </Project>
