--- a/src/Services/Hangefire.API/appsettings.Development.json
+++ b/src/Services/Hangefire.API/appsettings.Development.json
@@ -1,4 +1,17 @@
 {
+  "HangfireSettings": {
+    "Route": "/jobs",
+    "ServerName": "Hangefire API",
+    "Dashboard": {
+      "AppPath": "/",
+      "StatsPollingInterval": 2000,
+      "DashboardTitle": "Jobs"
+    },
+    "Storage": {
+      "DBProvider": "mongodb",
+      "ConnectionString": "mongodb://admin:admin@localhost:27018/hangfire-webapi?authSource=admin"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
