--- a/src/BuildingBlocks/Infrastructure/Infrastructure.csproj
+++ b/src/BuildingBlocks/Infrastructure/Infrastructure.csproj
@@ -10,13 +10,16 @@
 		<PackageReference Include="AutoMapper" Version="11.0.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
 		<PackageReference Include="FluentValidation" Version="11.0.3" />
+		<PackageReference Include="Hangfire.AspNetCore" Version="1.7.30" />
+		<PackageReference Include="Hangfire.Console" Version="1.4.2" />
+		<PackageReference Include="Hangfire.Console.Extensions" Version="1.0.5" />
+		<PackageReference Include="Hangfire.Mongo" Version="1.7.2" />
 		<PackageReference Include="MailKit" Version="3.3.0" />
 		<PackageReference Include="MongoDB.Driver" Version="2.17.1" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
 		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.22.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-
 		<PackageReference Include="Npgsql" Version="6.0.11" />
-
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.0" />
 	</ItemGroup>
 
