--- a/src/Services/Hangefire.API/Hangefire.API.csproj
+++ b/src/Services/Hangefire.API/Hangefire.API.csproj
@@ -9,6 +9,14 @@
   <ItemGroup>
     <PackageReference Include="Npgsql" Version="6.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+	  <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\BuildingBlocks\Common.Logging\Common.Logging.csproj" />
+    <ProjectReference Include="..\..\BuildingBlocks\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\..\BuildingBlocks\Shared\Shared.csproj" />
   </ItemGroup>
 
 </Project>
