add configure hangfire

--- a/src/Services/Basket.API/appsettings.json
+++ b/src/Services/Basket.API/appsettings.json
@@ -5,6 +5,11 @@
   "GrpcSettings": {
     "StockUrl": "http://localhost:5007"
   },
+  "BackgroundJobSettings": {
+    "HangfireUrl": "http://localhost:5008",
+    "ApiGwUrl": "http://localhost:5000"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
