--- a/src/Services/Hangefire.API/appsettings.Development.json
+++ b/src/Services/Hangefire.API/appsettings.Development.json
@@ -12,6 +12,16 @@
       "ConnectionString": "mongodb://admin:admin@localhost:27018/hangfire-webapi?authSource=admin"
     }
   },
+  "SMTPEmailSetting": {
+    "DisplayName": "Tp Microservice",
+    "EnanbleVerification": false,
+    "From": "phantanphu899398@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "UseSsl": true,
+    "Port": 465,
+    "Username": "Phantanphu10@gmail.com",
+    "Password": "Ptp@899398"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
