--- a/src/Services/Basket.API/appsettings.json
+++ b/src/Services/Basket.API/appsettings.json
@@ -7,7 +7,9 @@
   },
   "BackgroundJobSettings": {
     "HangfireUrl": "http://localhost:5008",
-    "ApiGwUrl": "http://localhost:5000"
+    "ApiGwUrl": "http://localhost:5000",
+    "BasketUrl": "baskets",
+    "ScheduledJobUrl": "/api/scheduled-jobs"
   },
   "Logging": {
     "LogLevel": {
