Add  saga parttern  basket-order-inventory rev_19

--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -146,8 +146,11 @@ services:
         - "CacheSettings:ConnectionString=basketdb:6379"
         - "EventBusSettings:HostAddress=amqp://guest:guest@localhost:5672"
         - "GrpcSettings:StockUrl=http://inventory.grpc"  
+        - BackgroundJobSettings:HangfireUrl=http://hangfire.api
+        - BackgroundJobSettings:CheckoutUrl=http://localhost:6000
     depends_on:
         - basketdb
+        - rabbitmq 
     ports:
         - "6004:80"
     restart: always
@@ -202,4 +205,15 @@ services:
       - inventory.product.api
     ports:
       - "6000:80"
+    restart: always
+  hangfire.api:
+    container_name: hangfire.api    
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - "HangFireSettings:Storage:ConnectionString=mongodb://admin:admin@hangfiredb/hangfire-webapi?authSource=admin"
+    depends_on:
+        - hangfiredb
+    ports:
+        - "6008:80"
     restart: always
