--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -72,6 +72,11 @@ services:
     build:
       context: .
       dockerfile: ApiGateways/OcelotApiGw/Dockerfile
+  hangfire.api:
+    image: ${DOCKER_REGISTRY-}hangfire-api:${PLATFORM:-linux}-${TAG:-latest}
+    build:
+      context: .
+      dockerfile: Services/Hangefire.API/Dockerfile
 
     
 #network section
