--- a/src/Saga.Orchestrator/Saga.Orchestrator/Saga.Orchestrator.csproj
+++ b/src/Saga.Orchestrator/Saga.Orchestrator/Saga.Orchestrator.csproj
@@ -4,17 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>29c47175-4dd9-4b22-a229-6e0b25d0f068</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
-    <PackageReference Include="Npgsql" Version="6.0.11" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-	  <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
-
   </ItemGroup>
 
   <ItemGroup>
