--- a/src/Saga.Orchestrator/Saga.Orchestrator/Saga.Orchestrator.csproj
+++ b/src/Saga.Orchestrator/Saga.Orchestrator/Saga.Orchestrator.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Stateless" Version="5.16.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
